--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 alabaster==0.7.16
-anyio==4.3.0
+anyio==4.4.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -10,7 +10,7 @@ attrs==23.2.0
 Babel==2.15.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
-certifi==2024.2.2
+certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 comm==0.2.2
@@ -24,7 +24,7 @@ docutils==0.21.2
 executing==2.0.1
 fastjsonschema==2.19.1
 flake8==7.0.0
-fonttools==4.52.1
+fonttools==4.53.0
 fqdn==1.5.1
 gitdb==4.0.11
 GitPython==3.1.43
@@ -35,8 +35,8 @@ idna==3.7
 imageio==2.34.1
 imagesize==1.4.1
 ipykernel==6.29.4
-ipython==8.24.0
-ipywidgets==8.1.2
+ipython==8.25.0
+ipywidgets==8.1.3
 isoduration==20.11.0
 isort==5.13.2
 jedi==0.19.1
@@ -52,12 +52,12 @@ jupyter-events==0.10.0
 jupyter-lsp==2.2.5
 jupyter_client==8.6.2
 jupyter_core==5.7.2
-jupyter_server==2.14.0
+jupyter_server==2.14.1
 jupyter_server_terminals==0.5.3
 jupyterlab==4.2.1
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.2
-jupyterlab_widgets==3.0.10
+jupyterlab_widgets==3.0.11
 kiwisolver==1.4.5
 lazy_loader==0.4
 logging_tree==1.10
@@ -87,7 +87,7 @@ pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
 prometheus_client==0.20.0
-prompt-toolkit==3.0.43
+prompt_toolkit==3.0.45
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -113,7 +113,7 @@ pyzmq==26.0.3
 qtconsole==5.5.2
 QtPy==2.4.1
 referencing==0.35.1
-requests==2.32.2
+requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.1
@@ -144,8 +144,8 @@ tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
-types-requests==2.32.0.20240523
-typing_extensions==4.12.0
+types-requests==2.32.0.20240602
+typing_extensions==4.12.1
 tzdata==2024.1
 Unidecode==1.3.8
 uri-template==1.3.0
@@ -155,5 +155,5 @@ wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.8.0
-widgetsnbextension==4.0.10
+widgetsnbextension==4.0.11
 yattag==1.15.2
