--- a/.mypy.ini
+++ b/.mypy.ini
@@ -258,3 +258,6 @@ ignore_missing_imports = True
 
 [mypy-pyslowloris.*]
 ignore_missing_imports = True
+
+[mypy-numpy.lib.*]
+ignore_missing_imports = True
