--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alabaster==0.7.16
+alabaster==1.0.0
 anyio==4.4.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -6,37 +6,37 @@ arrow==1.3.0
 astroid==3.2.4
 asttokens==2.4.1
 async-lru==2.0.4
-attrs==23.2.0
-Babel==2.15.0
+attrs==24.2.0
+babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 certifi==2024.7.4
-cffi==1.16.0
+cffi==1.17.0
 charset-normalizer==3.3.2
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
-debugpy==1.8.2
+debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
 docutils==0.21.2
 executing==2.0.1
 fastjsonschema==2.20.0
-flake8==7.1.0
+flake8==7.1.1
 fonttools==4.53.1
 fqdn==1.5.1
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
 httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
-imageio==2.34.2
+httpx==0.27.2
+idna==3.8
+imageio==2.35.1
 imagesize==1.4.1
 ipykernel==6.29.5
 ipython==8.26.0
-ipywidgets==8.1.3
+ipywidgets==8.1.5
 isoduration==20.11.0
 isort==5.13.2
 jedi==0.19.1
@@ -54,30 +54,30 @@ jupyter_client==8.6.2
 jupyter_core==5.7.2
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
-jupyterlab==4.2.4
+jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.11
+jupyterlab_widgets==3.0.13
 kiwisolver==1.4.5
 lazy_loader==0.4
 logging_tree==1.10
-lxml==5.2.2
+lxml==5.3.0
 Mako==1.3.5
 MarkupSafe==2.1.5
-matplotlib==3.9.1
+matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mistune==3.0.2
-mypy==1.11.0
+mypy==1.11.2
 mypy-extensions==1.0.0
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.3
-notebook==7.2.1
+notebook==7.2.2
 notebook_shim==0.2.4
-numpy==2.0.1
+numpy==2.1.0
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
@@ -91,9 +91,9 @@ prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyclassifiers==0.0.12
+pyclassifiers==0.0.13
 pycmdtools==0.0.82
-pycodestyle==2.12.0
+pycodestyle==2.12.1
 pycparser==2.22
 pydmt==0.3.16
 pyfakeuse==0.0.8
@@ -101,50 +101,50 @@ pyflakes==3.2.0
 Pygments==2.18.0
 pylint==3.2.6
 pylogconf==0.0.37
-pymakehelper==0.0.28
-pyparsing==3.1.2
+pymakehelper==0.0.30
+pyparsing==3.1.4
 pytconf==0.1.14
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytidylib==0.3.2
 pytz==2024.1
-PyYAML==6.0.1
-pyzmq==26.0.3
+PyYAML==6.0.2
+pyzmq==26.2.0
 qtconsole==5.5.2
 QtPy==2.4.1
 referencing==0.35.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.19.1
+rpds-py==0.20.0
 scikit-image==0.24.0
 scikit-learn==1.5.1
-scipy==1.14.0
+scipy==1.14.1
 Send2Trash==1.8.3
-setuptools==71.1.0
+setuptools==74.0.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 snowballstemmer==2.2.0
-soupsieve==2.5
-Sphinx==7.4.7
-sphinxcontrib-applehelp==1.0.8
-sphinxcontrib-devhelp==1.0.6
-sphinxcontrib-htmlhelp==2.0.6
+soupsieve==2.6
+Sphinx==8.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.8
-sphinxcontrib-serializinghtml==1.1.10
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
 termcolor==2.4.0
 terminado==0.18.1
 threadpoolctl==3.5.0
-tifffile==2024.7.24
+tifffile==2024.8.24
 tinycss2==1.3.0
-tomlkit==0.13.0
+tomlkit==0.13.2
 tornado==6.4.1
-tqdm==4.66.4
+tqdm==4.66.5
 traitlets==5.14.3
-types-python-dateutil==2.9.0.20240316
+types-python-dateutil==2.9.0.20240821
 types-requests==2.32.0.20240712
 typing_extensions==4.12.2
 tzdata==2024.1
@@ -153,8 +153,8 @@ uri-template==1.3.0
 urllib3==2.2.2
 venv-run==0.2.0
 wcwidth==0.2.13
-webcolors==24.6.0
+webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
-widgetsnbextension==4.0.11
-yattag==1.15.2
+widgetsnbextension==4.0.13
+yattag==1.16.0
