--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,132 @@
 alabaster==1.0.0
-anyio==4.4.0
+anyio==4.7.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-astroid==3.2.4
-asttokens==2.4.1
+astroid==3.3.5
+asttokens==3.0.0
 async-lru==2.0.4
 attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
-bleach==6.1.0
-certifi==2024.7.4
-cffi==1.17.0
-charset-normalizer==3.3.2
+bleach==6.2.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 comm==0.2.2
-contourpy==1.2.1
+contourpy==1.3.1
 cycler==0.12.1
-debugpy==1.8.5
+debugpy==1.8.9
 decorator==5.1.1
 defusedxml==0.7.1
-dill==0.3.8
+dill==0.3.9
 docutils==0.21.2
-executing==2.0.1
-fastjsonschema==2.20.0
+executing==2.1.0
+fastjsonschema==2.21.1
 flake8==7.1.1
-fonttools==4.53.1
+fonttools==4.55.2
 fqdn==1.5.1
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-idna==3.8
-imageio==2.35.1
+html5lib==1.1
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+imageio==2.36.1
 imagesize==1.4.1
 ipykernel==6.29.5
-ipython==8.26.0
+ipython==8.30.0
 ipywidgets==8.1.5
 isoduration==20.11.0
 isort==5.13.2
-jedi==0.19.1
+jedi==0.19.2
 Jinja2==3.1.4
 joblib==1.4.2
-json5==0.9.25
+json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
-jupyter_client==8.6.2
+jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
+jupyterlab==4.3.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
-kiwisolver==1.4.5
+kiwisolver==1.4.7
 lazy_loader==0.4
 logging_tree==1.10
 lxml==5.3.0
-Mako==1.3.5
-MarkupSafe==2.1.5
-matplotlib==3.9.2
+Mako==1.3.8
+MarkupSafe==3.0.2
+matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mistune==3.0.2
-mypy==1.11.2
+mypy==1.13.0
 mypy-extensions==1.0.0
-nbclient==0.10.0
+nbclient==0.10.1
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.3
-notebook==7.2.2
+networkx==3.4.2
+notebook==7.3.1
 notebook_shim==0.2.4
-numpy==2.1.0
+numpy==2.1.3
 overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
+packaging==24.2
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.2.2
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
+pillow==11.0.0
+platformdirs==4.3.6
+prometheus_client==0.21.1
+prompt_toolkit==3.0.48
+psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyclassifiers==0.0.13
-pycmdtools==0.0.82
+pyclassifiers==0.0.14
+pycmdtools==0.0.85
 pycodestyle==2.12.1
 pycparser==2.22
-pydmt==0.3.16
-pyfakeuse==0.0.8
+pydmt==0.3.18
+pyfakeuse==0.0.9
 pyflakes==3.2.0
 Pygments==2.18.0
-pylint==3.2.6
-pylogconf==0.0.37
-pymakehelper==0.0.30
-pyparsing==3.1.4
-pytconf==0.1.14
+pylint==3.3.2
+pylogconf==0.0.38
+pymakehelper==0.0.31
+pyparsing==3.2.0
+pytconf==0.1.18
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytidylib==0.3.2
-pytz==2024.1
+pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
-qtconsole==5.5.2
-QtPy==2.4.1
 referencing==0.35.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.20.0
+rpds-py==0.22.3
 scikit-image==0.24.0
-scikit-learn==1.5.1
+scikit-learn==1.5.2
 scipy==1.14.1
 Send2Trash==1.8.3
-setuptools==74.0.0
-six==1.16.0
+setuptools==75.6.0
+six==1.17.0
 smmap==5.0.1
 sniffio==1.3.1
 snowballstemmer==2.2.0
 soupsieve==2.6
-Sphinx==8.0.2
+Sphinx==8.1.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -135,26 +134,26 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
-termcolor==2.4.0
+termcolor==2.5.0
 terminado==0.18.1
 threadpoolctl==3.5.0
-tifffile==2024.8.24
-tinycss2==1.3.0
+tifffile==2024.9.20
+tinycss2==1.4.0
 tomlkit==0.13.2
-tornado==6.4.1
-tqdm==4.66.5
+tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
-types-python-dateutil==2.9.0.20240821
-types-requests==2.32.0.20240712
+types-python-dateutil==2.9.0.20241206
+types-requests==2.32.0.20241016
 typing_extensions==4.12.2
-tzdata==2024.1
+tzdata==2024.2
 Unidecode==1.3.8
 uri-template==1.3.0
-urllib3==2.2.2
+urllib3==2.2.3
 venv-run==0.2.0
 wcwidth==0.2.13
-webcolors==24.8.0
+webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.13
-yattag==1.16.0
+yattag==1.16.1
