--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 alabaster==1.0.0
-anyio==4.8.0
+anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-astroid==3.3.8
+astroid==3.3.9
 asttokens==3.0.0
-async-lru==2.0.4
-attrs==25.1.0
+async-lru==2.0.5
+attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.3
 bleach==6.2.0
@@ -16,14 +16,14 @@ charset-normalizer==3.4.1
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
-debugpy==1.8.12
-decorator==5.1.1
+debugpy==1.8.13
+decorator==5.2.1
 defusedxml==0.7.1
 dill==0.3.9
 docutils==0.21.2
 executing==2.2.0
 fastjsonschema==2.21.1
-flake8==7.1.1
+flake8==7.2.0
 fonttools==4.56.0
 fqdn==1.5.1
 gitdb==4.0.12
@@ -36,12 +36,13 @@ idna==3.10
 imageio==2.37.0
 imagesize==1.4.1
 ipykernel==6.29.5
-ipython==8.32.0
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.5
 isoduration==20.11.0
-isort==6.0.0
+isort==6.0.1
 jedi==0.19.2
-Jinja2==3.1.5
+Jinja2==3.1.6
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
@@ -55,20 +56,20 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyter_server==2.15.0
 jupyter_server_terminals==0.5.3
-jupyterlab==4.3.5
+jupyterlab==4.3.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.8
 lazy_loader==0.4
 logging_tree==1.10
-lxml==5.3.0
+lxml==5.3.1
 Mako==1.3.9
 MarkupSafe==3.0.2
-matplotlib==3.10.0
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mccabe==0.7.0
-mistune==3.1.1
+mistune==3.1.3
 mypy==1.15.0
 mypy-extensions==1.0.0
 nbclient==0.10.2
@@ -76,9 +77,9 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
-notebook==7.3.2
+notebook==7.3.3
 notebook_shim==0.2.4
-numpy==2.2.2
+numpy==2.2.4
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -86,47 +87,48 @@ pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
-platformdirs==4.3.6
+platformdirs==4.3.7
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
-psutil==6.1.1
+psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyclassifiers==0.0.15
 pycmdtools==0.0.85
-pycodestyle==2.12.1
+pycodestyle==2.13.0
 pycparser==2.22
 pydmt==0.3.19
 pyfakeuse==0.0.9
-pyflakes==3.2.0
+pyflakes==3.3.1
 Pygments==2.19.1
-pylint==3.3.4
+pylint==3.3.6
 pylogconf==0.0.38
 pymakehelper==0.0.35
-pyparsing==3.2.1
+pyparsing==3.2.3
 pytconf==0.1.18
 python-dateutil==2.9.0.post0
-python-json-logger==3.2.1
+python-json-logger==3.3.0
 pytidylib==0.3.2
-pytz==2025.1
+pytz==2025.2
 PyYAML==6.0.2
-pyzmq==26.2.1
+pyzmq==26.3.0
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.22.3
-scikit-image==0.25.1
+roman-numerals-py==3.1.0
+rpds-py==0.24.0
+scikit-image==0.25.2
 scikit-learn==1.6.1
-scipy==1.15.1
+scipy==1.15.2
 Send2Trash==1.8.3
-setuptools==75.8.0
+setuptools==78.1.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 snowballstemmer==2.2.0
 soupsieve==2.6
-Sphinx==8.1.3
+Sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -136,17 +138,17 @@ sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
 termcolor==2.5.0
 terminado==0.18.1
-threadpoolctl==3.5.0
-tifffile==2025.1.10
+threadpoolctl==3.6.0
+tifffile==2025.3.30
 tinycss2==1.4.0
 tomlkit==0.13.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
-types-requests==2.32.0.20241016
-typing_extensions==4.12.2
-tzdata==2025.1
+types-requests==2.32.0.20250328
+typing_extensions==4.13.0
+tzdata==2025.2
 Unidecode==1.3.8
 uri-template==1.3.0
 urllib3==2.3.0
