--- a/requirements.txt
+++ b/requirements.txt
@@ -3,107 +3,108 @@ anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-astroid==3.3.9
+astroid==3.3.10
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
 babel==2.17.0
-beautifulsoup4==4.13.3
+beautifulsoup4==4.13.4
 bleach==6.2.0
-certifi==2025.1.31
+certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
 comm==0.2.2
-contourpy==1.3.1
+contourpy==1.3.2
 cycler==0.12.1
-debugpy==1.8.13
+debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
-dill==0.3.9
+dill==0.4.0
 docutils==0.21.2
 executing==2.2.0
 fastjsonschema==2.21.1
 flake8==7.2.0
-fonttools==4.56.0
+fonttools==4.58.1
 fqdn==1.5.1
 gitdb==4.0.12
 GitPython==3.1.44
-h11==0.14.0
+h11==0.16.0
 html5lib==1.1
-httpcore==1.0.7
+httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 imageio==2.37.0
 imagesize==1.4.1
 ipykernel==6.29.5
-ipython==9.0.2
+ipython==9.2.0
 ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.5
+ipywidgets==8.1.7
 isoduration==20.11.0
 isort==6.0.1
 jedi==0.19.2
 Jinja2==3.1.6
-joblib==1.4.2
-json5==0.10.0
+joblib==1.5.1
+json5==0.12.0
 jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
 jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
+jupyter_core==5.8.1
+jupyter_server==2.16.0
 jupyter_server_terminals==0.5.3
-jupyterlab==4.3.6
+jupyterlab==4.4.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
+jupyterlab_widgets==3.0.15
 kiwisolver==1.4.8
 lazy_loader==0.4
 logging_tree==1.10
-lxml==5.3.1
-Mako==1.3.9
+lxml==5.4.0
+Mako==1.3.10
 MarkupSafe==3.0.2
-matplotlib==3.10.1
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mistune==3.1.3
-mypy==1.15.0
-mypy-extensions==1.0.0
+mypy==1.16.0
+mypy_extensions==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.4.2
-notebook==7.3.3
+networkx==3.5
+notebook==7.4.3
 notebook_shim==0.2.4
-numpy==2.2.4
+numpy==2.2.6
 overrides==7.7.0
-packaging==24.2
+packaging==25.0
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+pathspec==0.12.1
 pexpect==4.9.0
-pillow==11.1.0
-platformdirs==4.3.7
-prometheus_client==0.21.1
-prompt_toolkit==3.0.50
+pillow==11.2.1
+platformdirs==4.3.8
+prometheus_client==0.22.0
+prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyclassifiers==0.0.15
+pyclassifiers==0.0.19
 pycmdtools==0.0.85
 pycodestyle==2.13.0
 pycparser==2.22
 pydmt==0.3.19
 pyfakeuse==0.0.9
-pyflakes==3.3.1
+pyflakes==3.3.2
 Pygments==2.19.1
-pylint==3.3.6
+pylint==3.3.7
 pylogconf==0.0.38
-pymakehelper==0.0.35
+pymakehelper==0.0.37
 pyparsing==3.2.3
 pytconf==0.1.18
 python-dateutil==2.9.0.post0
@@ -111,23 +112,23 @@ python-json-logger==3.3.0
 pytidylib==0.3.2
 pytz==2025.2
 PyYAML==6.0.2
-pyzmq==26.3.0
+pyzmq==26.4.0
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 roman-numerals-py==3.1.0
-rpds-py==0.24.0
+rpds-py==0.25.1
 scikit-image==0.25.2
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy==1.15.3
 Send2Trash==1.8.3
-setuptools==78.1.0
+setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-snowballstemmer==2.2.0
-soupsieve==2.6
+snowballstemmer==3.0.1
+soupsieve==2.7
 Sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
@@ -136,26 +137,26 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
-termcolor==2.5.0
+termcolor==3.1.0
 terminado==0.18.1
 threadpoolctl==3.6.0
-tifffile==2025.3.30
+tifffile==2025.5.26
 tinycss2==1.4.0
 tomlkit==0.13.2
-tornado==6.4.2
+tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
-types-python-dateutil==2.9.0.20241206
-types-requests==2.32.0.20250328
-typing_extensions==4.13.0
+types-python-dateutil==2.9.0.20250516
+types-requests==2.32.0.20250515
+typing_extensions==4.13.2
 tzdata==2025.2
-Unidecode==1.3.8
+Unidecode==1.4.0
 uri-template==1.3.0
-urllib3==2.3.0
+urllib3==2.4.0
 venv-run==0.2.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
-widgetsnbextension==4.0.13
+widgetsnbextension==4.0.14
 yattag==1.16.1
