--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ httpx==0.28.1
 idna==3.10
 imageio==2.37.0
 imagesize==1.4.1
+iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
@@ -76,7 +77,7 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.5
-notebook==7.4.3
+notebook==7.4.4
 notebook_shim==0.2.4
 numpy==2.3.1
 overrides==7.7.0
@@ -88,15 +89,15 @@ pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
+pluggy==1.6.0
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyclassifiers==0.0.19
 pycmdtools==0.0.85
 pycparser==2.22
-pydmt==0.3.23
+pydmt==0.3.24
 pyfakeuse==0.0.9
 Pygments==2.19.2
 pylint==3.3.7
@@ -104,6 +105,7 @@ pylogconf==0.0.38
 pymakehelper==0.0.37
 pyparsing==3.2.3
 pytconf==0.1.19
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytidylib==0.3.2
@@ -116,6 +118,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 roman-numerals-py==3.1.0
 rpds-py==0.25.1
+ruff==0.12.1
 scikit-image==0.25.2
 scikit-learn==1.7.0
 scipy==1.16.0
