--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ fastjsonschema==2.21.1
 fonttools==4.58.4
 fqdn==1.5.1
 gitdb==4.0.12
-GitPython==3.1.44
+gitpython==3.1.44
 h11==0.16.0
 html5lib==1.1
 httpcore==1.0.9
@@ -37,48 +37,48 @@ imagesize==1.4.1
 iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.3.0
-ipython_pygments_lexers==1.1.1
+ipython-pygments-lexers==1.1.1
 ipywidgets==8.1.7
 isoduration==20.11.0
 isort==6.0.1
 jedi==0.19.2
-Jinja2==3.1.6
+jinja2==3.1.6
 joblib==1.5.1
 json5==0.12.0
 jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 jupyter==1.1.1
+jupyter-client==8.6.3
 jupyter-console==6.6.3
+jupyter-core==5.8.1
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
+jupyter-server==2.16.0
+jupyter-server-terminals==0.5.3
 jupyterlab==4.4.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.15
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.3
+jupyterlab-widgets==3.0.15
 kiwisolver==1.4.8
-lazy_loader==0.4
-logging_tree==1.10
+lazy-loader==0.4
+logging-tree==1.10
 lxml==6.0.0
-Mako==1.3.10
-MarkupSafe==3.0.2
+mako==1.3.10
+markupsafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mistune==3.1.3
 mypy==1.16.1
-mypy_extensions==1.1.0
+mypy-extensions==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.5
 notebook==7.4.4
-notebook_shim==0.2.4
+notebook-shim==0.2.4
 numpy==2.3.1
 overrides==7.7.0
 packaging==25.0
@@ -90,16 +90,17 @@ pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
 pluggy==1.6.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
+prometheus-client==0.22.1
+prompt-toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
-pure_eval==0.2.3
+pure-eval==0.2.3
+pyclassifiers==0.0.20
 pycmdtools==0.0.85
 pycparser==2.22
 pydmt==0.3.26
 pyfakeuse==0.0.9
-Pygments==2.19.2
+pygments==2.19.2
 pylint==3.3.7
 pylogconf==0.0.38
 pymakehelper==0.0.37
@@ -110,7 +111,7 @@ python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytidylib==0.3.2
 pytz==2025.2
-PyYAML==6.0.2
+pyyaml==6.0.2
 pyzmq==27.0.0
 referencing==0.36.2
 requests==2.32.4
@@ -122,14 +123,14 @@ ruff==0.12.1
 scikit-image==0.25.2
 scikit-learn==1.7.0
 scipy==1.16.0
-Send2Trash==1.8.3
+send2trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 snowballstemmer==3.0.1
 soupsieve==2.7
-Sphinx==8.2.3
+sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -148,9 +149,9 @@ tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 types-requests==2.32.4.20250611
-typing_extensions==4.14.0
+typing-extensions==4.14.0
 tzdata==2025.2
-Unidecode==1.4.0
+unidecode==1.4.0
 uri-template==1.3.0
 urllib3==2.5.0
 venv-run==0.2.0
