--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
 babel==2.17.0
+backcall==0.2.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
 certifi==2025.6.15
@@ -36,8 +37,7 @@ imageio==2.37.0
 imagesize==1.4.1
 iniconfig==2.1.0
 ipykernel==6.29.5
-ipython==9.4.0
-ipython-pygments-lexers==1.1.1
+ipython==8.4.0
 ipywidgets==8.1.7
 isoduration==20.11.0
 isort==6.0.1
@@ -50,7 +50,7 @@ jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 jupyter==1.1.1
 jupyter-client==8.6.3
-jupyter-console==6.6.3
+jupyter-console==6.4.4
 jupyter-core==5.8.1
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
@@ -79,7 +79,7 @@ nest-asyncio==1.6.0
 networkx==3.5
 notebook==7.4.4
 notebook-shim==0.2.4
-numpy==2.3.1
+numpy==2.1.3
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.0
@@ -87,11 +87,12 @@ pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
+pickleshare==0.7.5
 pillow==11.3.0
 platformdirs==4.3.8
 pluggy==1.6.0
 prometheus-client==0.22.1
-prompt-toolkit==3.0.51
+prompt-toolkit==2.0.10
 psutil==7.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.3
