--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ babel==2.17.0
 backcall==0.2.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
-certifi==2025.6.15
+certifi==2025.7.14
 cffi==1.17.1
 charset-normalizer==3.4.2
 comm==0.2.2
@@ -27,7 +27,7 @@ fastjsonschema==2.21.1
 fonttools==4.58.4
 fqdn==1.5.1
 gitdb==4.0.12
-gitpython==3.1.44
+gitpython==3.1.45
 h11==0.16.0
 html5lib==1.1
 httpcore==1.0.9
@@ -46,7 +46,7 @@ jinja2==3.1.6
 joblib==1.5.1
 json5==0.12.0
 jsonpointer==3.0.0
-jsonschema==4.24.0
+jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 jupyter==1.1.1
 jupyter-client==8.6.3
@@ -61,6 +61,7 @@ jupyterlab-pygments==0.3.0
 jupyterlab-server==2.27.3
 jupyterlab-widgets==3.0.15
 kiwisolver==1.4.8
+lark==1.2.2
 lazy-loader==0.4
 logging-tree==1.10
 lxml==6.0.0
@@ -99,7 +100,7 @@ pure-eval==0.2.3
 pyclassifiers==0.0.20
 pycmdtools==0.0.85
 pycparser==2.22
-pydmt==0.3.26
+pydmt==0.3.27
 pyfakeuse==0.0.9
 pygments==2.19.2
 pylint==3.3.7
@@ -118,6 +119,7 @@ referencing==0.36.2
 requests==2.32.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
 roman-numerals-py==3.1.0
 rpds-py==0.26.0
 ruff==0.12.1
@@ -150,7 +152,7 @@ tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 types-requests==2.32.4.20250611
-typing-extensions==4.14.0
+typing-extensions==4.14.1
 tzdata==2025.2
 unidecode==1.4.0
 uri-template==1.3.0
