--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 alabaster==1.0.0
-anyio==4.9.0
+anyio==4.10.0
+anyioutils==0.7.4
 argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
+argon2-cffi-bindings==25.1.0
 arrow==1.3.0
-astroid==3.3.10
+astroid==3.3.11
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
@@ -11,32 +12,31 @@ babel==2.17.0
 backcall==0.2.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
-comm==0.2.2
-contourpy==1.3.2
+certifi==2025.8.3
+cffi==2.0.0b1
+charset-normalizer==3.4.3
+comm==0.2.3
+contourpy==1.3.3
 cycler==0.12.1
-debugpy==1.8.14
+debugpy==1.8.16
 decorator==5.2.1
-defusedxml==0.7.1
+defusedxml==0.8.0rc2
 dill==0.4.0
 docutils==0.21.2
 executing==2.2.0
 fastjsonschema==2.21.1
-fonttools==4.58.4
+fonttools==4.59.0
 fqdn==1.5.1
 gitdb==4.0.12
 gitpython==3.1.45
 h11==0.16.0
 html5lib==1.1
-httpcore==1.0.9
-httpx==0.28.1
+httpx==1.0.dev2
 idna==3.10
 imageio==2.37.0
 imagesize==1.4.1
 iniconfig==2.1.0
-ipykernel==6.29.5
+ipykernel==7.0.0a1
 ipython==8.4.0
 ipywidgets==8.1.7
 isoduration==20.11.0
@@ -53,10 +53,10 @@ jupyter-client==8.6.3
 jupyter-console==6.4.4
 jupyter-core==5.8.1
 jupyter-events==0.12.0
-jupyter-lsp==2.2.5
+jupyter-lsp==2.2.6
 jupyter-server==2.16.0
 jupyter-server-terminals==0.5.3
-jupyterlab==4.4.4
+jupyterlab==4.5.0a1
 jupyterlab-pygments==0.3.0
 jupyterlab-server==2.27.3
 jupyterlab-widgets==3.0.15
@@ -67,23 +67,24 @@ logging-tree==1.10
 lxml==6.0.0
 mako==1.3.10
 markupsafe==3.0.2
-matplotlib==3.10.3
+matplotlib==3.10.5
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mistune==3.1.3
-mypy==1.16.1
+mypy==1.17.1
 mypy-extensions==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.5
-notebook==7.4.4
+notebook==7.5.0a0
 notebook-shim==0.2.4
-numpy==2.1.3
+numpy==2.3.2
+outcome==1.3.0.post0
 overrides==7.7.0
 packaging==25.0
-pandas==2.3.0
+pandas==2.3.1
 pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
@@ -103,29 +104,29 @@ pycparser==2.22
 pydmt==0.3.27
 pyfakeuse==0.0.9
 pygments==2.19.2
-pylint==3.3.7
+pylint==3.3.8
 pylogconf==0.0.38
 pymakehelper==0.0.37
 pyparsing==3.2.3
 pytconf==0.1.19
 pytest==8.4.1
 python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
+python-json-logger==4.0.0.dev0
 pytidylib==0.3.2
 pytz==2025.2
 pyyaml==6.0.2
-pyzmq==27.0.0
+pyzmq==27.0.1
 referencing==0.36.2
 requests==2.32.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 roman-numerals-py==3.1.0
-rpds-py==0.26.0
-ruff==0.12.1
+rpds-py==0.27.0
+ruff==0.12.8
 scikit-image==0.25.2
-scikit-learn==1.7.0
-scipy==1.16.0
+scikit-learn==1.7.1
+scipy==1.16.1
 send2trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
@@ -147,11 +148,12 @@ threadpoolctl==3.6.0
 tifffile==2025.6.11
 tinycss2==1.4.0
 tomlkit==0.13.3
-tornado==6.5.1
+tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
-types-python-dateutil==2.9.0.20250516
-types-requests==2.32.4.20250611
+truststore==0.10.0
+types-python-dateutil==2.9.0.20250809
+types-requests==2.32.4.20250809
 typing-extensions==4.14.1
 tzdata==2025.2
 unidecode==1.4.0
@@ -164,3 +166,4 @@ webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.14
 yattag==1.16.1
+zmq-anyio==0.3.10
