--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,8 @@ gitdb==4.0.12
 gitpython==3.1.45
 h11==0.16.0
 html5lib==1.1
-httpx==1.0.dev2
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 imageio==2.37.0
 imagesize==1.4.1
@@ -151,7 +152,6 @@ tomlkit==0.13.3
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
-truststore==0.10.0
 types-python-dateutil==2.9.0.20250809
 types-requests==2.32.4.20250809
 typing-extensions==4.15.0
